Done refactoring, polish; validator-core does not depend on Spring anymore, etc.